# Dependency

./: .gitignore  main.py  pyproject.toml
dependency/: GlobalDependency.py
tests/: test_dependency.py
